--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/App.js"></script>
+    <script type="module" src="/src/app/App.js"></script>
   </body>
 </html>
