--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/src/styles/add-restaurant-modal.css" />
     <link rel="stylesheet" href="/src/styles/restaurant-list.css" />
     <link rel="stylesheet" href="/src/styles/sort-filter.css" />
+    <link rel="stylesheet" href="/src/styles/tab-bar.css" />
     <link rel="icon" type="image/png" href="/icons/category-korean.png" />
     <title>점심 뭐 먹지</title>
   </head>
